deployment/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - app.host.com
    secretName: app-tls
  rules:
  - host: app.host.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 9999
